Regression: GPencil primitives handlers not working #96828

Closed
opened 2022-03-28 12:56:23 +02:00 by Antonio Vazquez · 8 comments

Tested using last master code on Windows

To reproduce:

  1. Open 2D Template
  2. Draw a Primitive curve
  3. Try to use the handler points.

The problem was produced by commit 52af3b20d4

Cleanup: cursor motion events now have value set to KM_NOTHING

The problem is the event->val is set to KM_NOTHING, but the primitive need to check that the mouse is moving and also that mouse button is pressed.

The line with the problem is 1484 in gpencil_primitive.c

if ((event->val == KM_PRESS) && tgpi->sel_cp != SELECT_NONE) {

Tested using last `master` code on Windows To reproduce: 1) Open 2D Template 2) Draw a Primitive curve 3) Try to use the handler points. The problem was produced by commit 52af3b20d45ea525a0ce66b2613ac132c9032a3f **Cleanup: cursor motion events now have value set to KM_NOTHING** The problem is the `event->val` is set to `KM_NOTHING`, but the primitive need to check that the mouse is moving and also that mouse button is pressed. The line with the problem is `1484` in `gpencil_primitive.c` ` if ((event->val == KM_PRESS) && tgpi->sel_cp != SELECT_NONE) {`
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

@ideasman42 could you look at this regresion? I don't know how check now if the mouse is moving and the mouse button is pressed.

@ideasman42 could you look at this regresion? I don't know how check now if the mouse is moving and the mouse button is pressed.
Author
Member

Added subscriber: @mendio

Added subscriber: @mendio
Antonio Vazquez self-assigned this 2022-03-28 13:09:47 +02:00

This issue was referenced by bac78e9bbe

This issue was referenced by bac78e9bbe1fa4ab13c0fc07b35e431dfb551610

This issue was referenced by e6dfe570cc

This issue was referenced by e6dfe570cc00fbacf41d66e55fcf2e1b195eb780
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez changed title from Regresion: GPencil primitives handlers not working to Regression: GPencil primitives handlers not working 2022-03-28 13:15:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96828
No description provided.