Fix T96828: GPencil primitives handlers not working

Following the logic is not necessary to check the mouse button because the status has changed before.